--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -41,19 +41,25 @@
     </div>
 
     <div class="navbar" id="navbar">
-        <a class="nav-item" href="{{ url_for('dashboard_managed') }}">dashboard jobs</a>
+        <span class="nav-group">
+            <a class="nav-item" href="{{ url_for('dashboard_managed') }}">dashboard jobs</a>
 
-        <a class="nav-item" href="{{ url_for('dashboard_freeruns') }}">dashboard freeruns</a>
+            <a class="nav-item" href="{{ url_for('dashboard_freeruns') }}">dashboard freeruns</a>
+        </span>
 
-        {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
-            <a class="nav-item" href="{{ '/' + mx_rule + '/' }}">{{ mx_page_name }}</a>
-        {%- endfor -%}
+        <span class="nav-group">
+            {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
+                <a class="nav-item" href="{{ '/' + mx_rule + '/' }}">{{ mx_page_name }}</a>
+            {%- endfor -%}
+        </span>
 
-        <a class="nav-item" href="{{ url_for('scheduler_managed_entries') }}">scheduler managed entries</a>
+        <span class="nav-group">
+            <a class="nav-item" href="{{ url_for('scheduler_managed_entries') }}">scheduler managed entries</a>
 
-        <a class="nav-item" href="{{ url_for('scheduler_freerun_entries') }}">scheduler freerun entries</a>
+            <a class="nav-item" href="{{ url_for('scheduler_freerun_entries') }}">scheduler freerun entries</a>
+        </span>
 
-        <a class="nav-item" href="{{ url_for('supervisor_entries') }}">supervisor</a>
+        <span class="nav-group"><a class="nav-item" href="{{ url_for('supervisor_entries') }}">supervisor</a></span>
     </div>
 </div>
 
