--- a/synergy/mx/static/styl/_tables.styl
+++ b/synergy/mx/static/styl/_tables.styl
@@ -57,7 +57,8 @@
         .time-window
             // flex 2 1 auto
         .include
-            // flex 2 1 auto
+            align-content center
+            align-self flex-end
         .refresh-button
             align-content right
             align-self flex-end
