--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -852,9 +852,10 @@ form.table-form {
   margin: 0 auto;
 }
 .table-filter-form .table-filter-container {
-  display: inline-flex;
+  display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: auto;
 }
 .table-filter-form .table-filter-container div:nth-child(1) {
@@ -866,19 +867,11 @@ form.table-form {
 .table-filter-form .table-filter-container div:nth-child(3) {
   margin-right: 1rem;
 }
-.table-filter-form .table-filter-container .filter {
-  flex: 1 1 auto;
-}
 .table-filter-form .table-filter-container .filter input[type="search"] {
-  height: auto;
-}
-.table-filter-form .table-filter-container .include {
-  align-content: center;
-  align-self: flex-end;
+  height: 24px;
+  width: auto;
 }
 .table-filter-form .table-filter-container .refresh-button {
-  align-content: right;
-  align-self: flex-end;
   text-align: right;
 }
 .dataTables_wrapper {
