Workflow UI styling
Minor improvements to flow viewer interface.

--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -1,4 +1,4 @@
-// compiles all modules into index.css
+//compiles all modules into index.css
 @import './_variables.styl'
 @import './_helpers.styl'
 @import './_ui.styl'
@@ -7,3 +7,4 @@
 @import './_checkbox.styl'
 @import './_context_menu.styl'
 @import './_popup.styl'
+@import './_flow_viewer.styl'
