--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -1040,10 +1040,17 @@ input:focus +.slider {
 }
 svg {
   width: 100%;
+  height: 100%;
   overflow: hidden;
+}
+.flow-header {
+  width: 100%;
+  flex: 1 0 auto;
+  height: min-content;
 }
 .live.map {
   width: 100%;
+  min-height: 400px;
 }
 .live.map text {
   font-weight: 300;
@@ -1080,7 +1087,8 @@ svg {
   fill: #999;
 }
 .step_container {
-  display: inline;
+  display: flex;
+  align-items: middle;
 }
 .step_section {
   height: 100%;
