--- a/synergy/mx/static/styl/_flow_viewer.styl
+++ b/synergy/mx/static/styl/_flow_viewer.styl
@@ -16,15 +16,20 @@ $color-15 = #ddd
 
 svg
     width 100%
-    // height 100%
+    height 100%
     // min-width 640px
     // min-height 480px
     overflow hidden
 
+.flow-header
+    width 100%
+    flex 1 0 auto
+    height min-content
+
 .live
     &.map
         width 100%
-        // height 100%
+        min-height 400px
 
         text
             font-weight 300
@@ -65,7 +70,8 @@ svg
                 fill #999
 
 .step_container
-    display inline
+    display flex
+    align-items middle
 
 .step_section
     height 100%
