Separated flow viewer styles
Separated _flow_viewer.styl to keep repositories separate. Kept the file here althoug it’s not compiled into index.css

--- a/synergy/mx/static/styl/_flow_viewer.styl
+++ b/synergy/mx/static/styl/_flow_viewer.styl
@@ -75,8 +75,10 @@ svg
 
 .step_section
     height 100%
-    float left
     display block
+    width min-content
+    margin-right 1rem
+    margin-left 1rem
 
 .step_detail
     height 30% !important
@@ -86,9 +88,6 @@ svg
 
 .width_70pct
     width 70% !important
-
-.right_margin
-    margin-left 10px
 
 .actionset_failed
     background-color $color-2
@@ -127,8 +126,8 @@ svg
 
 .user_message
     display none
-    margin-top 3rem
     text-align center
+    margin 2rem auto 1rem auto
 
 .tipsy
     .name
@@ -141,11 +140,11 @@ svg
         font-size 1.2em
 
 .header_layout
-    display table
+    display flex
+    align-content center
 
-.header_layout_element
-    display table-cell
-    vertical-align middle
+// .header_layout_element
+//     align-content center
 
 div
     &.tab
