--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -7,4 +7,4 @@
 @import './_checkbox.styl'
 @import './_context_menu.styl'
 @import './_popup.styl'
-@import './_flow_viewer.styl'
+// @import './_flow_viewer.styl'
