--- a/synergy/mx/static/css/composite-processing-chart.css
+++ b/synergy/mx/static/css/composite-processing-chart.css
@@ -9,3 +9,16 @@ line {
 text.active {
     fill: red;
 }
+
+div.tooltip {
+    position: absolute;
+    text-align: left;
+    width: 180px;
+    height: 56px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 2px;
+    pointer-events: none;
+}
